# nmts

./: .bazelignore  .bazelrc  .gitignore  .npmrc  BUILD  CHARTER.md  CONTRIBUTORS.md  Cargo.toml  MODULE.bazel  NOTICE  README.md  WORKSPACE  buf.yaml  go.mod  go.sum  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: main.yml
bazel/: gen_txtpbs.bzl  rule.bzl  validation.bzl
build_tools/: tools.go
build_tools/prost_toolchain/: BUILD
cmd/embedstyles/: BUILD  main.go
cmd/nmtscli/: BUILD  d2.go  dot.go  html.go  main.go  nquads.go  prolog.go  validate.go
cmd/template2txtpb/: BUILD  main.go
docs/: entity_relationship.md  guidelines.md
examples/: MODULE.bazel
examples/ethernet/: BUILD  ethernet.html  sw1.txtpb  sw1_sw2_link.txtpb  sw2.txtpb
examples/satellite_mef/: BUILD  satellite_mef.html
examples/satellite_mef/geo_satellites/: BUILD  block_ek_interface.txtpb.tmpl  geo_satellite_gen3.txtpb.tmpl
examples/satellite_mef/ground_stations/: BUILD  gs.txtpb.tmpl  tempe_arizona.json
examples/satellite_mef/leo_satellites/: BUILD  LEO_1_0_0.json  LEO_1_9_4.json  leo_satellite_gen3.txtpb.tmpl
examples/satellite_mef/pops/: AWS.json  AZURE.json  BUILD  GCP.json  pop.txtpb.tmpl
examples/satellite_mef/sdn/: terminal_nms.txtpb
examples/satellite_mef/user_terminals/: BUILD  US_CA-1_0.json  user_terminal_gen1.txtpb.tmpl
lib/entity_relationship/: BUILD  collection.go  collection_builder.go  entity.go  entity_test.go  fragments.go  relationship.go
lib/entityrelationship/: BUILD  collection.go  collection_builder.go  entity.go  entity_test.go  fragments.go  relationship.go
lib/graph/: BUILD  graph.go  graph_test.go  traverse.go  traverse_test.go
lib/svgstyle/: BUILD
lib/validation/: BUILD  validation.go  validation_test.go
nmts/: v0  v2alpha
patches/: BUILD
proto/: BUILD  nmts.proto
proto/core/: BUILD  classifier.proto  packet.proto  packet_test.go
proto/ek/logical/: BUILD  bp_agent_fn.proto  bpagent_fn.proto  interface.proto  logical_packet_link.proto  network_node.proto  route_fn.proto  sdn_agent.proto  switch_fn.proto  uni.proto
proto/ek/physical/: BUILD  README.md  antenna.proto  common.proto  modem.proto  modulation.proto  physical_medium_link.proto  platform.proto  port.proto  signal_processing_chain.proto  transceiver.proto
proto/ek/service/: BUILD  uni.proto
proto/service/: BUILD  service.proto
proto/types/: README.md
proto/types/geophys/: BUILD  azimuth_elevation_mask.proto  coordinates.proto  geodesy.proto  motion.proto  orbital.proto
proto/types/iana/: BUILD  ipproto.proto
proto/types/ieee/: BUILD  ethertype.proto  ieee802.proto
proto/types/ietf/: BUILD  common.proto  inet.proto  routing.proto
proto/types/mef/: BUILD  common.proto  sdwan.proto  subscriber.proto  uni.proto
proto/types/physical/: BUILD  antenna_pattern.proto  polarization.proto
src/: lib.rs
tools/: BUILD.bazel  tools.go
v0/bazel/: gen_txtpbs.bzl  rule.bzl  validation.bzl
v0/cmd/embedstyles/: BUILD  main.go
v0/cmd/nmtscli/: BUILD  dot.go  html.go  main.go  nquads.go  prolog.go  validate.go
v0/cmd/template2txtpb/: BUILD  main.go
v0/examples/: .bazelrc
v0/examples/ethernet/: BUILD  ethernet.html  sw1.txtpb  sw2.txtpb
v0/examples/satellite_mef/: BUILD  satellite_mef.html
v0/lib/entityrelationship/: BUILD  collection.go  collection_builder.go  entity.go  entity_test.go  fragments.go  relationship.go
v0/lib/svgstyle/: BUILD
v0/lib/validation/: BUILD  validation.go  validation_test.go
v0/proto/: BUILD  nmts.proto
v0/proto/core/: BUILD  classifier.proto  packet.proto  packet_test.go
v0/proto/ek/: README.md
v0/proto/service/: BUILD  service.proto
v1/bazel/: BUILD  gen_txtpbs.bzl  rule.bzl  validation.bzl
v1/cmd/embedstyles/: BUILD  main.go
v1/cmd/nmtscli/: BUILD  d2.go  dot.go  html.go  main.go  nquads.go  prolog.go  validate.go
v1/cmd/template2txtpb/: BUILD  main.go
v1/cmd/validation/: BUILD  main.go
v1/examples/: .bazelrc  MODULE.bazel
v1/examples/ethernet/: BUILD  sw1_sw2_link.txtpb
v1/examples/internal_fabric/: BUILD  single_switch.txtpb
v1/examples/satellite_mef/: BUILD
v1/lib/entityrelationship/: BUILD  collection.go  collection_builder.go  entity.go  entity_test.go  fragments.go  relationship.go
v1/lib/graph/: BUILD  graph.go  graph_test.go  traverse.go  traverse_test.go
v1/lib/svgstyle/: BUILD  graphviz-style.css
v1/lib/utilities/: BUILD  utilities.go  utilities_test.go
v1/lib/validation/: BUILD  validation.go  validation_test.go
v1/proto/: BUILD  nmts.proto  package.json  version.bzl
v1/proto/core/: BUILD  classifier.proto  packet.proto  packet_test.go
v1alpha/bazel/: gen_txtpbs.bzl  rule.bzl  validation.bzl
v1alpha/cmd/embedstyles/: BUILD  main.go
v1alpha/cmd/nmtscli/: BUILD  dot.go  html.go  main.go  nquads.go  prolog.go  validate.go
v1alpha/cmd/template2txtpb/: BUILD  main.go
v1alpha/cmd/validation/: BUILD  main.go
v1alpha/examples/ethernet/: BUILD  sdn_agent.txtpb  sw1.txtpb  sw2.txtpb
v1alpha/examples/satellite_mef/: BUILD
v1alpha/lib/: BUILD
v1alpha/lib/entityrelationship/: BUILD  collection.go  collection_builder.go  entity.go  entity_test.go  fragments.go  relationship.go
v1alpha/lib/graph/: BUILD  graph.go  graph_test.go  traverse.go  traverse_test.go
v1alpha/lib/svgstyle/: BUILD  svgstyle.go
v1alpha/lib/validation/: BUILD  validation.go  validation_test.go
v1alpha/proto/: BUILD  nmts.proto
v1alpha/proto/core/: BUILD  classifier.proto  packet.proto  packet_test.go
v1alpha/proto/service/: BUILD  service.proto
v1alpha/proto/types/: BUILD
v2alpha/bazel/: gen_txtpbs.bzl  rule.bzl  validation.bzl
v2alpha/cmd/embedstyles/: BUILD  main.go
v2alpha/cmd/nmtscli/: BUILD  dot.go  html.go  main.go  nquads.go  prolog.go  validate.go
v2alpha/cmd/template2txtpb/: BUILD  main.go
v2alpha/examples/: MODULE.bazel
v2alpha/examples/ethernet/: BUILD  ethernet.html
v2alpha/examples/internal_fabric/: BUILD  internal_fabric.html
v2alpha/proto/: BUILD  nmts.proto  package.json  version.bzl
v2alpha/proto/types/threegpp/: BUILD.bazel  nrm.proto
(+243 files in other folders)
