# Copyright (c) Outernet Council and Contributors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# This is a dummy package to declare dependencies for rules_rust crate_universe.
# It is not intended to be built directly.
[package]
name = "nmts-bazel-deps"
version = "0.0.1"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
petgraph = { version = "0.8.2" }
prost = { version = "0.13.1" }
tokio = { version = "1.38", features = ["macros", "net", "rt-multi-thread", "signal"], default-features = false }
prost-reflect = { version = "0.13.1", features = ["text-format"] }
prost-types = { version = "0.13.1", default-features = false }
protoc-gen-prost = { version = "0.4.0" }
# protoc-gen-tonic = { version = "0.4.0" }
tonic = { version = "0.12.1", features = ["transport"] }
tonic-build = { version = "0.12.1" }
