# Copyright (c) Outernet Council and Contributors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@aspect_rules_ts//ts:proto.bzl", "ts_proto_library")
load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto_grpc_cpp//:defs.bzl", "cpp_proto_library")
load("@rules_proto_grpc_java//:defs.bzl", "java_proto_library")
load("@rules_proto_grpc_python//:defs.bzl", "python_proto_library")

package(
    default_visibility = ["//visibility:public"],
)

##
# Per-proto file library rules.
##
proto_library(
    name = "nrm_proto",
    srcs = ["nrm.proto"],
    import_prefix = "nmts",
)

cpp_proto_library(
    name = "threegpp_cpp_proto",
    protos = [":nrm_proto"],
)

go_proto_library(
    name = "threegpp_go_proto",
    importpath = "outernetcouncil.org/nmts/v2alpha/proto/types/threegpp",
    proto = ":nrm_proto",
)

java_proto_library(
    name = "threegpp_java_proto",
    protos = [":nrm_proto"],
)

python_proto_library(
    name = "threegpp_python_proto",
    protos = [":nrm_proto"],
)

ts_proto_library(
    name = "threegpp_ts_proto",
    # Don't attempt to add source files.
    copy_files = False,
    # gen_connect_es is not currently compatible with json_types=true.
    gen_connect_es = False,
    node_modules = "//v2alpha/proto:node_modules",
    proto = ":nrm_proto",
    protoc_gen_options = {
        "json_types": "true",
    },
)
